--- a/anime-detail.html
+++ b/anime-detail.html
@@ -233,7 +233,8 @@
   <audio id="tojima-ost" loop><source src="https://www.dropbox.com/scl/fi/t3chgli1kyjvp2bonmei2/Tojima-Tanzaburo-Wants-To-Be-A-Kamen-Rider-OP-FULL-Wanna-Be-by-TeddyLoid-feat.-Shigeru-Matsuzaki.mp3?rlkey=pharcldwlirapw2f25jgijhof&st=qs93guvw&raw=1" type="audio/mpeg"></audio>
   <audio id="almachan-ost" loop><source src="https://www.dropbox.com/scl/fi/58yc7nfovronyfcigs5k8/Alma-chan-wa-Kazoku-ni-Naritai-Ending-Full-Arifuretetai-by-KAF.mp3?rlkey=6gl9bayyvblte648fswou8zyj&st=1p1m5x51&raw=1" type="audio/mpeg"></audio>
   <audio id="spice-ost" loop><source src="https://www.dropbox.com/scl/fi/q7uucujmeg0651xokdjam/Spice-and-Wolf-2024-ED-Ending-2-Creditless-4K-24FPS.mp3?rlkey=zjl1tecsqu9df9raidkr1xtt1&st=uoty142s&raw=1" type="audio/mpeg"></audio>
-  <audio id="oyasumi" loop><source src="https://www.dropbox.com/scl/fi/z1kusweadab5q7kcb81qp/Oyasumi-Sekusu-Episode-4-Ending.mp3?rlkey=zoz6n8cgbfy3ciys39vaqdrrv&st=8nj6o0vy&raw=1" type="audio/mpeg"></audio>
+  <audio id="oyasumi-ost" loop><source src="https://www.dropbox.com/scl/fi/z1kusweadab5q7kcb81qp/Oyasumi-Sekusu-Episode-4-Ending.mp3?rlkey=zoz6n8cgbfy3ciys39vaqdrrv&st=8nj6o0vy&raw=1" type="audio/mpeg"></audio>
+  <audio id="rym-ost" loop><source src="rym.mp3" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -3281,7 +3282,142 @@
           }
         ]
       },
-
+      58: {
+        title: "Rick and Morty",
+        desc: "Las descontroladas aventuras de un científico brillante, pero excéntrico, junto a su nieto común y corriente, los llevan a explorar universos paralelos, enfrentar criaturas extrañas y vivir situaciones absurdas que desafían la lógica.",
+        cover: "rymp.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "rym1.jpg",
+            eps: [
+              { title: "Rick and Morty T1 Cap 1"},
+              { title: "Rick and Morty T1 Cap 2"},
+              { title: "Rick and Morty T1 Cap 3"},
+              { title: "Rick and Morty T1 Cap 4"},
+              { title: "Rick and Morty T1 Cap 5"},
+              { title: "Rick and Morty T1 Cap 6"},
+              { title: "Rick and Morty T1 Cap 7"},
+              { title: "Rick and Morty T1 Cap 8"},
+              { title: "Rick and Morty T1 Cap 9"},
+              { title: "Rick and Morty T1 Cap 10"},
+              { title: "Rick and Morty T1 Cap 11"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "rym2.jpg",
+            eps: [
+              { title: "Rick and Morty T2 Cap 1"},
+              { title: "Rick and Morty T2 Cap 2"},
+              { title: "Rick and Morty T2 Cap 3"},
+              { title: "Rick and Morty T2 Cap 4"},
+              { title: "Rick and Morty T2 Cap 5"},
+              { title: "Rick and Morty T2 Cap 6"},
+              { title: "Rick and Morty T2 Cap 7"},
+              { title: "Rick and Morty T2 Cap 8"},
+              { title: "Rick and Morty T2 Cap 9"},
+              { title: "Rick and Morty T2 Cap 10"},
+            ]
+          },
+          {
+            num: 3,
+            cover: "rym3.jpg",
+            eps: [
+              { title: "Rick and Morty T1 Cap 1"},
+              { title: "Rick and Morty T1 Cap 2"},
+              { title: "Rick and Morty T1 Cap 3"},
+              { title: "Rick and Morty T1 Cap 4"},
+              { title: "Rick and Morty T1 Cap 5"},
+              { title: "Rick and Morty T1 Cap 6"},
+              { title: "Rick and Morty T1 Cap 7"},
+              { title: "Rick and Morty T1 Cap 8"},
+              { title: "Rick and Morty T1 Cap 9"},
+              { title: "Rick and Morty T1 Cap 10"},
+            ]
+          },
+          {
+            num: 4,
+            cover: "rym4.jpg",
+            eps: [
+              { title: "Rick and Morty T4 Cap 1"},
+              { title: "Rick and Morty T4 Cap 2"},
+              { title: "Rick and Morty T4 Cap 3"},
+              { title: "Rick and Morty T4 Cap 4"},
+              { title: "Rick and Morty T4 Cap 5"},
+              { title: "Rick and Morty T4 Cap 6"},
+              { title: "Rick and Morty T4 Cap 7"},
+              { title: "Rick and Morty T4 Cap 8"},
+              { title: "Rick and Morty T4 Cap 9"},
+              { title: "Rick and Morty T4 Cap 10"},
+            ]
+          },
+          {
+            num: 5,
+            cover: "rym5.jpg",
+            eps: [
+              { title: "Rick and Morty T5 Cap 1"},
+              { title: "Rick and Morty T5 Cap 2"},
+              { title: "Rick and Morty T5 Cap 3"},
+              { title: "Rick and Morty T5 Cap 4"},
+              { title: "Rick and Morty T5 Cap 5"},
+              { title: "Rick and Morty T5 Cap 6"},
+              { title: "Rick and Morty T5 Cap 7"},
+              { title: "Rick and Morty T5 Cap 8"},
+              { title: "Rick and Morty T5 Cap 9"},
+              { title: "Rick and Morty T5 Cap 10"},
+            ]
+          },
+          {
+            num: 6,
+            cover: "rym6.jpg",
+            eps: [
+              { title: "Rick and Morty T6 Cap 1"},
+              { title: "Rick and Morty T6 Cap 2"},
+              { title: "Rick and Morty T6 Cap 3"},
+              { title: "Rick and Morty T6 Cap 4"},
+              { title: "Rick and Morty T6 Cap 5"},
+              { title: "Rick and Morty T6 Cap 6"},
+              { title: "Rick and Morty T6 Cap 7"},
+              { title: "Rick and Morty T6 Cap 8"},
+              { title: "Rick and Morty T6 Cap 9"},
+              { title: "Rick and Morty T6 Cap 10"},
+            ]
+          },
+          {
+            num: 7,
+            cover: "rym7.jpg",
+            eps: [
+              { title: "Rick and Morty T7 Cap 1"},
+              { title: "Rick and Morty T7 Cap 2"},
+              { title: "Rick and Morty T7 Cap 3"},
+              { title: "Rick and Morty T7 Cap 4"},
+              { title: "Rick and Morty T7 Cap 5"},
+              { title: "Rick and Morty T7 Cap 6"},
+              { title: "Rick and Morty T7 Cap 7"},
+              { title: "Rick and Morty T7 Cap 8"},
+              { title: "Rick and Morty T7 Cap 9"},
+              { title: "Rick and Morty T7 Cap 10"},
+            ]
+          },
+          {
+            num: 8,
+            cover: "rym8.jpg",
+            eps: [
+              { title: "Rick and Morty T8 Cap 1"},
+              { title: "Rick and Morty T8 Cap 2"},
+              { title: "Rick and Morty T8 Cap 3"},
+              { title: "Rick and Morty T8 Cap 4"},
+              { title: "Rick and Morty T8 Cap 5"},
+              { title: "Rick and Morty T8 Cap 6"},
+              { title: "Rick and Morty T8 Cap 7"},
+              { title: "Rick and Morty T8 Cap 8"},
+              { title: "Rick and Morty T8 Cap 9"},
+              { title: "Rick and Morty T8 Cap 10"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -3490,6 +3626,7 @@
         55: ['almachan-ost'],
         56: ['spice-ost'],
         57: ['oyasumi-ost'],
+        58: ['rym-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
