--- a/index.html
+++ b/index.html
@@ -237,12 +237,6 @@
         <button id="tiktok-btn" type="button" aria-label="Abrir TikTok en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://www.tiktok.com/@archinime?_t=ZS-8zGoKE4IqLw&_r=1'); })(event)">
           <img src="tiktok.jpg" alt="TikTok" loading="lazy" decoding="async">
         </button>
-        <button id="facebook-btn" type="button" aria-label="Abrir YouTube en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://www.facebook.com/share/16sn9Hw5Yd/'); })(event)">
-          <img src="face1.jpg" alt="Facebook" loading="lazy" decoding="async">
-        </button>
-        <button id="telegram-btn" type="button" aria-label="Abrir YouTube en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://t.me/+4Rb9fcFai0FlYjM5'); })(event)">
-          <img src="telegram1.jpg" alt="Telegram" loading="lazy" decoding="async">
-        </button>
       </span>
     </h1>
 
@@ -270,6 +264,7 @@
         <option>Fantasía</option>
         <option>Fantasía oscura</option>
         <option>Familiar</option>
+        <option>Gag</option>
         <option>Gore</option>
         <option>Harem</option>
         <option>Hentai</option>
@@ -460,7 +455,8 @@
       {id:54, title:"Tōjima Tanzaburō wa Kamen Rider ni Naritai", aliases: ["Tojima Wants to Be a Kamen Rider"], img:"tojima1.jpg", rating:4.8, genres:["Comedia","Acción","Tokusatsu","Seinen"]},
       {id:55, title:"Alma-chan wa Kazoku ni Naritai", aliases: ["Alma-chan Wants to Be a Family!"], img:"almachan.jpg", rating:4.6, genres:["Comedia","Romance","Ciencia ficción","Seinen"]},
       {id:56, title:"Spice and Wolf", aliases: ["Okami to Kōshinryō"], img:"drgfedfgdf.jpg", rating:4.8, genres:["Acción","Romance","Ciencia ficción","Aventura","Fantasía","Drama","Seinen"]},
-      {id:57, title:"Oyasumi Sex", img:"oyasumi.jpg", rating:4.8, genres:["Hentai","Romance","Slice of Life","Seijin"]},
+      {id:57, title:"Oyasumi Sex", img:"oyasumi.jpg", rating:4.9, genres:["Hentai","Romance","Slice of Life","Seijin"]},
+      {id:58, title:"Rick and Morty", aliases: ["Rick y Morty"], img:"rymp.jpg", rating:4.9, genres:["Animación","Acción","Ciencia ficción","Aventura","Comedia","Comedia oscura","Gag","Seijin"]},
     ];
 
     /* ----------------------------
