--- a/anime-detail.html
+++ b/anime-detail.html
@@ -235,6 +235,7 @@
   <audio id="spice-ost" loop><source src="https://www.dropbox.com/scl/fi/q7uucujmeg0651xokdjam/Spice-and-Wolf-2024-ED-Ending-2-Creditless-4K-24FPS.mp3?rlkey=zjl1tecsqu9df9raidkr1xtt1&st=uoty142s&raw=1" type="audio/mpeg"></audio>
   <audio id="oyasumi-ost" loop><source src="https://www.dropbox.com/scl/fi/z1kusweadab5q7kcb81qp/Oyasumi-Sekusu-Episode-4-Ending.mp3?rlkey=zoz6n8cgbfy3ciys39vaqdrrv&st=8nj6o0vy&raw=1" type="audio/mpeg"></audio>
   <audio id="rym-ost" loop><source src="rym.mp3" type="audio/mpeg"></audio>
+  <audio id="akujiki-ost" loop><source src="akujiki.mp3" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -3418,7 +3419,31 @@
           }
         ]
       },
-
+      59: {
+        title: "Akujiki Reijou to Kyouketsu Koushaku",
+        desc: "Toda dama noble debe tener unos gustos refinados, y lo que más disfruta la señorita Melphiera son… ¡los monstruos! Por desgracia, la sociedad no ve con buenos ojos tales antojos y la apoda la “Villana Voraz”. En pleno banquete, un monstruo la ataca, pero la salva el “Duque Sediento de Sangre”. Es brutal, misterioso y encantador. ¿Será él la primera persona que aprecie su monstruoso apetito?",
+        cover: "akujiki.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "akujiki1.jpg",
+            eps: [
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 1"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 2"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 3"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 4"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 5"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 6"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 7"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 8"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 9"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 10"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 11"},
+              { title: "Akujiki Reijou to Kyouketsu Koushaku T1 Cap 12"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -3627,6 +3652,7 @@
         56: ['spice-ost'],
         57: ['oyasumi-ost'],
         58: ['rym-ost'],
+        59: ['akujiki-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
