--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       {id:21, title:"Shiunji-ke no Kodomotachi", img:"Shiux.jpg", rating:4.6, genres:["Comedia","Romance","Drama","Harem","Slice of Life","Seinen"]},
       {id:22, title:"Goblin Slayer", img:"goblinslayerportada.jpg", rating:4.7, genres:["Fantasía oscura","Horror","Aventura","Fantasía","Seinen"]},
       {id:23, title:"Kanchigai no Atelier Meister", img:"atelier1.jpg", rating:4.6, genres:["Aventura","Comedia","Fantasía","Acción","Shōnen"]},
-      {id:24, title:"Definitivamente. ¡No me gusta mi hermano para nada!", img:"Oni.jpg", rating:4.1, genres:["Comedia","Romance","Slice of Life","Harem","Ecchi","Seinen"]},
+      {id:24, title:"Definitivamente. ¡No me gusta mi hermano para nada!", img:"Oni.jpg", rating:4.5, genres:["Comedia","Romance","Slice of Life","Harem","Ecchi","Seinen"]},
       {id:25, title:"Kaiju No. 8", img:"kaijuportada.jpg", rating:4.9, genres:["Sobrenatural","Fantasía oscura","Acción","Ciencia ficción","Aventura","Comedia","Kaiju","Shōnen"]},
       {id:26, title:"Zootopia", img:"zootopiaportada.jpg", rating:4.7, genres:["Aventura","Comedia","Policial","Infantil","Familiar","Misterio","Animación","Dibujo Animado","Kodomo"]},
       {id:27, title:"Clevatess -Majuu no Ou to Akago", img:"Clevatessportada.jpg", rating:4.8, genres:["Acción","Fantasía","Drama","Seinen"]},
@@ -457,6 +457,7 @@
       {id:56, title:"Spice and Wolf", aliases: ["Okami to Kōshinryō"], img:"drgfedfgdf.jpg", rating:4.8, genres:["Acción","Romance","Ciencia ficción","Aventura","Fantasía","Drama","Seinen"]},
       {id:57, title:"Oyasumi Sex", img:"oyasumi.jpg", rating:4.9, genres:["Hentai","Romance","Slice of Life","Seijin"]},
       {id:58, title:"Rick and Morty", aliases: ["Rick y Morty"], img:"rymp.jpg", rating:4.9, genres:["Animación","Acción","Ciencia ficción","Aventura","Comedia","Comedia oscura","Gag","Seijin"]},
+      {id:59, title:"Akujiki Reijō to Kyōketsu Kōshaku", aliases: ["Pass the Monster Meat, Milady!"], img:"akujiki.jpg", rating:4.5, genres:["Fantasía","Comedia","Cocina","Cocina","Romance","Shōjo"]},
     ];
 
     /* ----------------------------
