--- a/video-player.html
+++ b/video-player.html
@@ -1509,6 +1509,7 @@
           "7": { link:'https://www.dropbox.com/scl/fi/2it4ewslghx8vtsts6upa/To-Your-Eternity-T3-Cap-7.mp4?rlkey=h1l18k0blnvt6xexl0wgnbb7m&st=6u23g1rp&raw=1', link2: 'https://drive.google.com/file/d/1nkr_iF1tfOzOeT240jGZuC6k47UuhRkB/preview', title:'To Your Eternity T3 Cap 7' },
           "8": { link:'https://drive.google.com/file/d/1_NhHoLfqhkantkwtzn3ekJTxAPo3sqUo/preview', title:'To Your Eternity T3 Cap 8' },
           "9": { link:'https://drive.google.com/file/d/1J68mncT1iGJRA6hH2VVWk11sGIvAvaCC/preview', title:'To Your Eternity T3 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/149LlvTrovgAQfJzmF07qGs_0vE_Yfmr7/preview', title:'To Your Eternity T3 Cap 10' },
         }
       },
       "32": {
@@ -1624,7 +1625,7 @@
           "16": { link:'https://www.dropbox.com/scl/fi/gskk37ewm8iqq4nqqklqa/Gachiakuta-T1-Cap-16.mp4?rlkey=r9uagn7mrg2j89odijzpf60w7&st=rqz3kerl&raw=1', link2: 'https://drive.google.com/file/d/1qFWtIiOMn_fFyRPXx_n5wb9XZs3zOdxP/preview', title:'Gachiakuta T1 Cap 16' },
           "17": { link:'https://drive.google.com/file/d/1CP6xbNBo6vwjnym6RdCGm-0DoNWTEbpW/preview', title:'Gachiakuta T1 Cap 17' },
           "18": { link:'https://drive.google.com/file/d/1lgnKPlUlgYK8ft4YbZjoPpDSZXbh8w0z/preview', title:'Gachiakuta T1 Cap 18' },
-          "19": { link:'&raw=1', title:'Gachiakuta T1 Cap 19' },
+          "19": { link:'https://drive.google.com/file/d/1Ce_4nCnzvhL6hnmfdGCbdVjRHoHyff9z/preview', title:'Gachiakuta T1 Cap 19' },
           "20": { link:'&raw=1', title:'Gachiakuta T1 Cap 20' },
           "21": { link:'&raw=1', title:'Gachiakuta T1 Cap 21' },
           "22": { link:'&raw=1', title:'Gachiakuta T1 Cap 22' },
@@ -1730,6 +1731,7 @@
         },
         "4": {
           "1": { link:'https://drive.google.com/file/d/16XcHfR5gJZPkhJ_6QpxOW1R71HcApwB-/preview', title:'One Punch-Man T3 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1vx-GmwAj-HgvQ0FpfSDCm-NejRHhbNIk/preview', title:'One Punch-Man T3 Cap 2' },
         }
       },
       "41": {
@@ -2041,6 +2043,13 @@
           "4": { link: 'https://drive.google.com/file/d/1mfKA7Y-Hw8LB_u0LM6Vaaw04WUTsLzsJ/preview', link2: 'https://www.dropbox.com/scl/fi/ssy2qf91agoemqiapwyhx/Spy-Family-T3-Cap-4.mp4?rlkey=mu0e8hzalf9k8cmdmuel3v2tw&st=8n1dtbv4&raw=1', title:'Spy × Family T3 Cap 4' },
           "5": { link: 'https://drive.google.com/file/d/1n_aDJZIlhwYUf2-DxXKSqJ3wSfalI7Wv/preview', title:'Spy × Family T3 Cap 5' },
           "6": { link: 'https://drive.google.com/file/d/16tVbRmoixbYBZhsRAoiPp5hevpvWG_OP/preview', title:'Spy × Family T3 Cap 6' },
+          "7": { link: 'https://drive.google.com/file/d/1h8UGkStGKWmxobVXbuPFnq5k-2GuXw9l/preview', title:'Spy × Family T3 Cap 7' },
+          "8": { link: '/preview', title:'Spy × Family T3 Cap 8' },
+          "9": { link: '/preview', title:'Spy × Family T3 Cap 9' },
+          "10": { link: '/preview', title:'Spy × Family T3 Cap 10' },
+          "11": { link: '/preview', title:'Spy × Family T3 Cap 11' },
+          "12": { link: '/preview', title:'Spy × Family T3 Cap 12' },
+          "13": { link: '/preview', title:'Spy × Family T3 Cap 13' },
         }
       },
       "50": {
@@ -2232,6 +2241,7 @@
           "2": { link:'https://drive.google.com/file/d/15EYYksOimq9RBKI89LCdtqZ-CXWEFv3l/preview', link2: 'https://www.dropbox.com/scl/fi/bnebnja6hlins0uim6eqx/My-Hero-Academia-T8-Cap-2.mp4?rlkey=n092mfb3wrjrm6w4h6p111ty2&st=xfbcbml9&raw=1', title:'My Hero Academia T8 Cap 2' },
           "3": { link:'https://drive.google.com/file/d/1qT5zJg0WrrWvazqmC8eByOgJWl2hCcoJ/preview', title:'My Hero Academia T8 Cap 3' },
           "4": { link:'https://drive.google.com/file/d/1DeZgMNC9P6-614PHPl8EMt6JHP35PONe/preview', title:'My Hero Academia T8 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1-IiecYCX0Vwb4cub9dMOmhmAEa6evV-s/preview', title:'My Hero Academia T8 Cap 5' },
         }
       },
       "52": {
@@ -2296,6 +2306,7 @@
           "16": { link:'https://drive.google.com/file/d/1FBNlU1HMLRCERe4G1SP5pyjEk3NqBpoy/preview', link2: 'https://www.dropbox.com/scl/fi/m7o5uida81hxj9hdoteo9/Futari-Solo-Camp-T1-Cap-16.mp4?rlkey=ch0kjyhkagbu1xulleofxhdsw&st=9sf2eblj&raw=1', title:'Futari Solo Camp T1 Cap 16' },
           "17": { link:'https://drive.google.com/file/d/15J93sUxSY360H4hpANx7YG27VRSvv-mn/preview', title:'Futari Solo Camp T1 Cap 17' },
           "18": { link:'https://drive.google.com/file/d/1ga1442E8p8D_lvleGPyHsI3F1XLM0hJp/preview', title:'Futari Solo Camp T1 Cap 18' },
+          "19": { link:'https://drive.google.com/file/d/1iNv6CV05PbPX1_S4aFWhiibJE9ovoP8G/preview', title:'Futari Solo Camp T1 Cap 19' },
         }
       },
       "54": {
@@ -2306,6 +2317,7 @@
           "4": { link:'https://drive.google.com/file/d/1FY_jZ61wRtSTS6akzxOvYvBvqTBXGcV8/preview', link2: 'https://www.dropbox.com/scl/fi/6u0gyjxomjfvh2nm40l0w/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-4.mp4?rlkey=7ul5jfhj5h4rkttdj5vwfrne3&st=6eu62t5d&raw=1', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 4' },
           "5": { link:'https://drive.google.com/file/d/1LGTe12Pezs-4VVuV4Zkz4XRTeXszP6vv/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 5' },
           "6": { link:'https://drive.google.com/file/d/1H0sq3zKrJxnLIAF_MlmuI1-cUAtom07M/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1MXYNnpSIKUMuIr1nVgGVi-aM4Z2DA5Pz/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 7' },
         }
       },
       "55": {
@@ -2316,6 +2328,7 @@
           "4": { link:'https://drive.google.com/file/d/1tycCUt59hcHopKPxqkPaZi6CJASstaZn/preview', link2: 'https://www.dropbox.com/scl/fi/1vetm4oi2yfkum6qy76bf/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-4.mp4?rlkey=t4yxb3f6tnhslvyd1y0cwiphg&st=285328hq&raw=1', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 4' },
           "5": { link:'https://drive.google.com/file/d/1h2Pk9Z-ZLzo_ULtRnbvzlamjrBfaA8-7/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 5' },
           "6": { link:'https://drive.google.com/file/d/1_gvtHRhB6n-4htLzhPvWyf_C97pHM4NU/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1pLLpO8OFSFH2USXg18NBEkOF009Qv-NZ/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 7' },
         }
       },
       "56": {
@@ -2454,6 +2467,18 @@
           "10": { link:'https://drive.google.com/file/d/1chuPssurZ6dnvn15rCZ8sTLGKpg8Qoax/preview', title:'Rick and Morty T8 Cap 10' },
         }
       },
+      "59": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/1NpMl27On3MBjWk8FVSGI7PLgo7qCH4ai/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/129z4bRuiWpSArC0pgv8MNEx8sMa2nO2n/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1RIGtj50pR3zy7T5cOgNm-fftArydQIGN/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/10M_u0KhInxWuvvhW16_3-eAwj-1Ti9yg/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1EUF_ZSVcR-QGAGYY2PEgaw51XGknfawe/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1U5FcxO9X0_iAVY0_J2gwaG3qXEHxODBL/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1fbWAiIbXifd_EeWCq-hdxStTNLyGqSiF/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 7' },
+        }
+      },
+
 
 
 
